# LogicAppMCP.py

./: .gitignore  README.md  application.py  gits  gunicorn.conf.py  pydantic_settings.py  pyproject.toml  requirements.txt  uvicorn.py
.cursor/rules/: logicappmcp-rules.mdc
.github/workflows/: master_logicappmcp.yml
.kiro/steering/: logicappmcp-rules.md
app/: __init__.py  cert_utils.py  config.py  logging_config.py  logicapp_client.py  main.py  mcp_handler.py
app/consumption/: README.md  __init__.py  client.py  mcp_handler.py
app/kudu/: README.md  __init__.py  client.py  mcp_handler.py
app/shared/: __init__.py  base_client.py
app/standard/: CLI_COMMANDS.md  README.md  __init__.py  client.py  mcp_handler.py
azure/: __init__.py  identity.py
azure/mgmt/: __init__.py
azure/mgmt/logic/: __init__.py  models.py
azure/mgmt/web/: __init__.py
fastapi/: __init__.py  testclient.py
fastapi/middleware/: __init__.py
httpx/: __init__.py
tests/: __init__.py  conftest.py  test_cert_utils.py  test_clients_consumption.py  test_consumption_mcp.py  test_dependency_imports.py  test_kudu_client.py  test_kudu_client_fixed.py  test_kudu_mcp.py  test_kudu_mcp_complete.py  test_main_routes.py  test_standard_mcp.py
