[project]
name = "logicappmcp-py"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "uvicorn",
    "httpx",
    "azure-identity",
    "azure-mgmt-logic",
    "azure-mgmt-web",
    "pydantic",
    "pydantic-settings",
    "pytest",
    "pytest-asyncio",
    "httpx[http2]"
]
